--- a/package.json
+++ b/package.json
@@ -19,6 +19,10 @@
     "react-dom": "^16.12.0"
   },
   "devDependencies": {
+    "eslint": "^7.6.0",
+    "eslint-config-prettier": "^6.11.0",
+    "eslint-plugin-prettier": "^3.1.4",
+    "eslint-plugin-react": "^7.20.5",
     "prettier": "2.0.5"
   },
   "repository": {
