--- a/package.json
+++ b/package.json
@@ -19,6 +19,9 @@
     "react-dom": "^16.12.0"
   },
   "devDependencies": {
+    "@babel/plugin-proposal-class-properties": "^7.10.4",
+    "@babel/preset-react": "^7.10.4",
+    "babel-preset-gatsby": "^0.5.5",
     "eslint": "^7.6.0",
     "eslint-config-prettier": "^6.11.0",
     "eslint-plugin-prettier": "^3.1.4",
